--- a/advancedSearch.html
+++ b/advancedSearch.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Google Advanced Search</title>
   <link rel="stylesheet" href="advanced.css">
 </head>
 <body>
   <nav class="top">
-    <a href="https://www.google.com"><img src="googleLogo.png"></a>
+    <a href="index.html"><img src="googleLogo.png"></a>
     <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.co.uk/&ec=GAZAmgQ" id="sign-in">Sign In</a>
   </nav>
   <div id="advanced-search">Advanced Search</div>
